# NaiveCC

./: CMakeLists.txt  README.md
Sources/: NaiveCGrammar.h  main.cpp
Sources/AST/: ASTInclude.h  ArithOperator.h  Assignment.h  Constant.h  Emitter.h  Expression.h  FunctionCall.h  GraphvizNode.h  Identifier.h  IfElseStatement.h  IfStatement.h  NullStatement.h  RelationOperator.h  ReturnStatement.h  SemanticValue.h  Sequence.h  Statement.h  Temp.h  WhileStatement.h
Sources/Lex/: Lexer.h  Token.h  TokenKind.h
Sources/Parse/: Action.h  DFABuilder.h  Grammar.h  LR1Item.h  LR1TableBuilder.h  Parser.h  StackState.h
Sources/Tree/: Tree.h  TreeGen.h
Sources/Utilities/: FilterNull.h  VariantVisitor.h
Tests/: test.ncc  test0.ncc  test0.tcx  test1.tcx  test2.tcx  test3.tcx  test4.tcx  test5.tcx
